--- a/app/views/users/_table_user.html.erb
+++ b/app/views/users/_table_user.html.erb
@@ -2,9 +2,7 @@
   <thead>
     <tr>
       <th>ID</th>
-      <th>Last Name</th>
-      <th>First Name</th>
-      <th>Middle Name</th>
+      <th>Name</th>
       <th>Username</th>
       <th>Mobile Number</th>
       <th>Date Created</th>
@@ -17,9 +15,7 @@
     <% @user.each do |user| %>
     <tr>
       <td><%= user.id%></td>
-      <td><%= user.last_name%></td>
-      <td><%= user.first_name%></td>
-      <td><%= user.middle_name%></td>
+      <td> <%= user.last_name%>, <%= user.first_name%> <%= user.middle_name%></td>
       <td><%= user.username%></td>
       <td><%= user.mobile_number%></td>
       <td><%= user.created_at%></td>
